--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,20 @@ annotated-types==0.6.0
 anyio==4.3.0
 asttokens==2.4.1
 attrs==23.2.0
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
 distro==1.9.0
+dnspython==2.6.1
 executing==2.0.1
+Flask==3.0.3
+Flask-PyMongo==2.3.0
 frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
@@ -21,7 +26,9 @@ httpx==0.27.0
 idna==3.6
 ipykernel==6.29.4
 ipython==8.22.2
+itsdangerous==2.2.0
 jedi==0.19.1
+Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
 jupyter_client==8.6.1
@@ -32,6 +39,7 @@ langchain-core==0.1.42
 langchain-openai==0.1.3
 langchain-text-splitters==0.0.1
 langsmith==0.1.46
+MarkupSafe==2.1.5
 marshmallow==3.21.1
 matplotlib-inline==0.1.6
 multidict==6.0.5
@@ -49,7 +57,9 @@ pure-eval==0.2.2
 pydantic==2.7.0
 pydantic_core==2.18.1
 Pygments==2.17.2
+pymongo==4.6.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.2
@@ -68,4 +78,5 @@ typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 wcwidth==0.2.13
+Werkzeug==3.0.2
 yarl==1.9.4
